# MGAC2

./: CMakeLists.txt  LICENSE.md  README.md  spacegroups.xml
doc/: histan-full.xml  input-spec  testing.xml
include/: gasp2.hpp  gasp2common.hpp  gasp2db.hpp  gasp2param.hpp  gasp2pop.hpp  gasp2qe.hpp  gasp2struct.hpp
src/: gasp2.cpp  gasp2common.cpp  gasp2db.cpp  gasp2param.cpp  gasp2pop.cpp  gasp2qe.cpp  gasp2struct.cpp  mgac.cpp  spacegroups.xml
